classDiagram
    direction LR

    class Scala3ContractsCore {
      +SchemaConforms
    }

    class SchemaConforms

    class SchemaConformsDerivation {
      +derived(...): SchemaConforms
    }

    Scala3ContractsCore *-- SchemaConformsDerivation

    class TypeInspectionOut
    class TypeInspectionContract

    class QuotesReflection {
      +TypeRepr
      +reportError
    }

    class SchemaAST
    class Record
    class Field
    class Primitive
    class OptionT
    class ArrayT
    class MapT

    SchemaAST <|-- Record
    SchemaAST <|-- Primitive
    SchemaAST <|-- OptionT
    SchemaAST <|-- ArrayT
    SchemaAST <|-- MapT
    Record *-- Field

    class Policy
    class Exact
    class Backward
    class Forward
    class Full

    Policy <|-- Exact
    Policy <|-- Backward
    Policy <|-- Forward
    Policy <|-- Full

    class TypedSource
    class TypedSink

    TypedSource ..> SchemaConforms : requires
    TypedSink ..> SchemaConforms : requires

    SchemaConformsDerivation ..> TypeInspectionOut : quotes
    SchemaConformsDerivation ..> TypeInspectionContract : quotes
    SchemaConformsDerivation ..> QuotesReflection : reflection
    SchemaConformsDerivation ..> SchemaAST : builds
